2008-05-09: Added unsafe_expose_array to parameterized resizable arrays.

2006-11-22: Updated OCamlMakefile.

2005-12-26: Fixed a build problem.

2005-10-24: Added sof_list.

2004-04-11: Removed use of unsafe external function that depends on
            current CVS-version.

2004-01-28: Renamed external function for compatibility with most recent
            OCaml-version.

            Updated OCamlMakefile.

2003-04-09: Updated OCamlMakefile.
            Fixed an installation problem.

2003-01-07: Updated OCamlMakefile to make use of "findlib".

2002-09-23: Fixed a bug in "remove_n" (arguments not fully checked).

            Slightly improved efficiency.

2002-09-11: Updated OCamlMakefile and license.

            Documented all modules for ocamldoc.

            Changed module Res for better accessibility.

            Made resizable weak arrays conform to module Weak again.

2002-05-04: Revised the whole installation procedure. See INSTALL for
            details.

2002-04-30: Updated OcamlMakefile: it does not ask for confirmation
            during installation anymore!

2001-06-30: Removed "Printexc.catch" from stupid_ga-example: is going
            to be deprecated in upcoming OCaml-release.

2001-06-24: Added special module for resizable integer arrays (again),
            because it is faster on many operations.

2001-01-30: Made Makefile more general (allows simpler addition of
            further examples).

2001-01-26: Made use of the new OCaml-keyword "include" for module
            inclusion. This makes the file "lib/res.ml" significantly
            shorter. This change requires an OCaml-version higher
            than 3.00.

2001-01-24: Updated OcamlMakefile

2000-06-24: Updated OcamlMakefile

2000-06-13: Updated OcamlMakefile

2000-06-11: Updated OcamlMakefile

2000-06-08: Added installation routine + updated OcamlMakefile again:

            This upgrade makes installation much easier! Read the
            updated INSTALL-file!
