@@ -1,3 +1,6 @@
+2008-09-16: Changed strategy API to greatly improve performance of
+            growing/shrinking.
+
 2008-05-09: Added unsafe_expose_array to parameterized resizable arrays.
 
 2006-11-22: Updated OCamlMakefile.
